--- a/main.html
+++ b/main.html
@@ -9,34 +9,35 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto+Mono:wght@100&display=swap"
         rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="Dance.html" class="navbar-brand">Lorem ipsum</a>
+            <a href="#" class="navbar-brand"></a>
             <div class="navbar-wrap">
                 <ul class="navbar-menu">
-                    <li><a href="Dance.html">Lorem ipsum</a></li>
-                    <li><a href="sign_up.html">Lorem ipsum</a></li>
-                    <li><a href="timing.html">Lorem ipsum</a></li>
-                    <li><a href="price.html">Lorem ipsum</a></li>
-                    <li><a href="tutors.html">Lorem ipsum</a></li>
-                    <li><a href="directions.html">Lorem ipsum</a></li>
+                    <li><a href="main.html">Главная</a></li>
+                    <li><a href="#">Научные работы</a></li>
+                    <li><a href="#">Статьи</a></li>
+                    <li><a href="portfolio.html">Портфолио</a></li>
                 </ul>
             </div>
         </div>
+    </nav>
 
-        </nav.navbar>
-
-        <div class="main">
+    <div class="main">
+        <div class="container-main">
             <div class="title-main">
                 <h1 class="text-title">Lorem ipsum</h1>
-                <h4 class="text-main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor dui ipsum,
+                <h4 class="text-main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor dui
+                    ipsum,
                     in volutpat arcu luctus ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
                     suscipit tristique velit vitae gravida. Phasellus eget risus non diam consequat sodales eget sit
                     amet justo. Aenean viverra in tortor vel rutrum. Aenean quis sagittis lectus, sit amet tincidunt
-                    ipsum. Quisque ac eros nec nunc mollis commodo. Morbi tincidunt nisl et elit congue, in porta elit
+                    ipsum. Quisque ac eros nec nunc mollis commodo. Morbi tincidunt nisl et elit congue, in porta
+                    elit
                     porta.
                 </h4>
                 <img class="photo-main" src="photo/background.png">
@@ -47,22 +48,29 @@
                 <a class="points" href="#">Algorithms</a>
                 <a class="points" href="#">Interview Preparation</a>
                 <a class="points" href="#">Python</a>
-                <a class="points" href="#"> Java </a>
+                <a class="points" href="#">Java </a>
             </div>
         </div>
-        <footer>
-            <div class="footer-container">
-                <div class="row">
-                    <div class="footer-name">
-                        <p>Никита Сергеевич</p>
-                    </div>
-                    <div class="footer-number">
-                        <p>Контакты: 8 901-234-56-78</p>
-                    </div>
-                    <div class="footer-adres">
-                        <p>Санкт-Петербург 2023г</p>
-                    </div>
+    </div>
+    <img src="gifs/flowpastcylinder.gif">
+    <img src="gifs/liddrivencavity.gif">
+    <footer>
+        <div class="footer-container">
+            <div class="row">
+                <div class="footer-name">
+                    <p>Никита Сергеевич</p>
+                </div>
+                <div class="footer-number">
+                    <p>Контакты: 8 901-234-56-78</p>
+                </div>
+                <div class="footer-email">
+                    <p>nikita@gmail.com</p>
+                </div>
+                <div class="footer-adres">
+                    <p>GitHub:qweryuiop</p>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
+
 </body>
