add gif and ....

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,9 @@
 <html lang="ru">
 
 <head>
-    <title>Диплом</title>
+    <title>
+        <img src="icons/telegram-svgrepo-com.svg">
+        Диплом</title>
     <link href="style_css.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
