--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="body-main">
     <nav class="navbar">
         <div class="container">
             <a href="#" class="navbar-brand"></a>
@@ -20,7 +20,7 @@
                 <ul class="navbar-menu">
                     <li><a href="main.html">Главная</a></li>
                     <li><a href="#">Научные работы</a></li>
-                    <li><a href="#">Статьи</a></li>
+                    <li><a href="newPortfolio.html">Другое портфолио</a></li>
                     <li><a href="portfolio.html">Портфолио</a></li>
                 </ul>
             </div>
