--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <ul class="navbar-menu">
                     <li><a href="main.html">Главная</a></li>
                     <li><a href="#">Научные работы</a></li>
-                    <li><a href="#">Статьи</a></li>
+                    <li><a href="newPortfolio.html">Другое портфолио</a></li>
                     <li><a href="portfolio.html">Портфолио</a></li>
                 </ul>
             </div>
