--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Диплом</title>
-    <link href="style_css.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
