--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <title>
         <img src="icons/telegram-svgrepo-com.svg">
         Диплом</title>
-    <link href="style_css.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
